--- a/frontend/global/global.css
+++ b/frontend/global/global.css
@@ -49,3 +49,20 @@ button {
     display: none;
     visibility: none;
 }
+select {
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    cursor: pointer;
+    padding: 10px;
+}
+
+.menu{
+    position: fixed;
+    top: 0;
+    left: -50vw;
+    width: 50vw;
+    height: 100vh;
+    background-color:rgba(255,255,255,.5);
+    transition: all .2s ;
+}
