--- a/frontend/mapa/style.css
+++ b/frontend/mapa/style.css
@@ -1,4 +1,54 @@
-.map{
-    width: 800px;
-    height: 800px;
+@import url('../global/global.css');
+
+.container{
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(to right, rgba(108, 161, 161, 0.067), rgba(60, 190, 179, 0.667));
 }
+
+header{
+    width: 100vw;
+    height: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-inline: 20px;
+}
+
+
+.map{
+    width: 100vw;
+    height: 90%;
+}
+
+.modal{
+    /* display: none;
+    visibility: hidden; */
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    align-items: center;
+    justify-content: center;
+}
+
+.form-modal {
+    width: 85%;
+    height: 50%;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+}
+
+#closeBot{
+    position: absolute;
+    top: 1%;
+    right: 3px;
+}
+
