--- a/frontend/global/global.css
+++ b/frontend/global/global.css
@@ -40,6 +40,7 @@ button {
     border-radius: 10px;
     width: 100px;
     background-color: var(--base-color);
+    border: 1px solid #000;
     color: white;
     font-weight: bold;
     margin-top: 15px;
