--- a/frontend/usuario/style.css
+++ b/frontend/usuario/style.css
@@ -65,3 +65,12 @@ tbody > tr:nth-child(odd){
     font-size: 1.25rem;
     margin-left: 10px;
 }
+
+.dados{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+button{
+    margin-bottom: 10px;
+}
